# rustsqltrainer

./: Cargo.toml  README.md  db.toml  exercises.toml
.github/workflows/: rust.yaml
frontend/: vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: Exercise.vue  Exercises.vue
src/: cli.rs  lib.rs  main.rs
src/core/: db.rs  exercises.rs  mod.rs
src/web/: api.rs  embed.rs  handlers.rs  mod.rs
tests/: exercise_tests.rs
