[package]
name = "rsqlt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
mime_guess = "2.0.5"
rusqlite = { version = "0.36.0", features = ["bundled"] }
rust-embed = "8.7.2"
rustyline = "16.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_rusqlite = "0.39.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
toml = "0.8.23"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
webbrowser = "1.0.5"
